# dingwei-crm-sales-app

./: .env.example  .gitignore  CONTEXT_HANDOFF.md  README.md  docker-compose.yml
backend/: package-lock.json  package.json
backend-python/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 0001_initial.py
backend-python/app/: main.py
backend-python/app/api/v1/: __init__.py  ai.py  auth.py  customers.py  health.py  manager.py  plans.py  transfers.py  uploads.py  visit_records.py  weekly_reports.py
backend-python/app/core/: config.py  deps.py  security.py
backend-python/app/db/: base.py  seed.py  session.py
backend-python/app/models/: __init__.py  customer.py  customer_transfer.py  plan.py  sample.py  user.py  visit_attachment.py  visit_record.py  weekly_report.py
backend-python/app/schemas/: __init__.py  ai.py  auth.py  common.py  customer.py  manager.py  plan.py  transfer.py  visit_record.py  weekly_report.py
backend-python/app/services/: auth_service.py  customer_service.py  manager_service.py  plan_service.py  transfer_service.py  upload_service.py  visit_record_service.py  weekly_report_service.py
backend-python/tests/: test_smoke.py
backend/src/: main.ts
docs/: AI功能设计.md  GitHub上传说明.md  PRD.md  原型交互说明.md  开发计划.md  技术栈选型-v2.md  技术栈选型.md  接口文档.md  数据字典.md  系统集成方案.md  部署说明.md  需求文档-v2.md  需求文档.md  项目结构.md
docs/agent/: AGENT_HANDOFF.md
frontend/: .gitignore  Dockerfile  crm-api.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-react-legacy/src/: App.tsx  vite-env.d.ts
frontend-react-legacy/src/components/: ToneTrigger.tsx
frontend-react-legacy/src/lib/: labels.ts
frontend-react-legacy/src/pages/: AIPage.tsx  CalendarPage.tsx  CustomersPage.tsx  PrototypePage.tsx  ReportsPage.tsx
frontend-react-legacy/src/routes/: AppLayout.tsx
frontend-react-legacy/src/store/: sheets.ts
frontend-react-legacy/src/styles/: compat.css
frontend/.claude/: launch.json
frontend/prototype/: crm-prototype-server.mjs
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AppHeader.tsx  BottomNav.module.css  BottomNav.tsx  Fab.tsx
frontend/src/lib/: api.ts  queryClient.ts
frontend/src/pages/: AIPage.tsx  CalendarPage.module.css  CalendarPage.tsx  CustomersPage.module.css  CustomersPage.tsx  LoginPage.module.css  LoginPage.tsx  ReportsPage.tsx  placeholder.module.css
prototype/: crm-sales-timepage-prototype.html
(+21 files in other folders)
